# streaming-ufabc

./: README.md  app.vue  nuxt.config.ts  package.json
backend/: pyproject.toml
backend/app/: dependencies.py  main.py
backend/migration/: env.py
components/: NavBar.vue  TheFooter.vue
components/media/: Hero.vue
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/components/: p-chart.vue
frontend/composables/: customFetch.js  global.js
frontend/pages/: index.vue
frontend/plugins/: apollo.ts  vuetify.js
internationalization/: pt-BR.json
pages/: index.vue  profile.vue
plugins/: auth0.client.js
